#
# Copyright (C) 2014. See COPYRIGHT in top-level directory.
#

noinst_PROGRAMS =  lu_splash2_shm

lu_splash2_shm_CFLAGS= -O2 -pthread -Wall -W -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls -Wdisabled-optimization
lu_splash2_shm_CFLAGS+= -Wpadded -Winline -Wpointer-arith -Wsign-compare -Wendif-labels
lu_splash2_shm_LDFLAGS= -lm
